--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
-  api-handy:
+  api-marina-caribia:
     build: .
-    container_name: api-handy
+    container_name: api-marina-caribia
     restart: always
     volumes:
       - .:/code
     ports:
-      - "8005:8005"
-      - "8006:8006"
+      - "8003:8003"
+      - "8004:8004"
       
