--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
-        "php-open-source-saver/jwt-auth": "^2.3"
+        "php-open-source-saver/jwt-auth": "^2.3",
+        "thiagoalessio/tesseract_ocr": "^2.13"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
